[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "A Minimalistic Modern Django Boilerplate"
authors = ["Nguyen Van Dan <nguyenvdan07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "3.2.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
